fixed blog spacing and added posts
fixed blog spacing and added 2 new posts to the catalog

--- a/src/css/blog.module.scss
+++ b/src/css/blog.module.scss
@@ -6,9 +6,8 @@
 
 .post-item {
   margin: 1rem 0;
-  padding: 0 3rem;
   display: block;
-  width: 100%;
+  max-width: 100%;
 
   a {
     background: #f4f4f4;
