--- a/src/templates/blog.css
+++ b/src/templates/blog.css
@@ -1,12 +1,24 @@
 .paper {
   background: white;
-  max-width: 60%;
+  max-width: 85%;
   box-shadow:
     /* The top layer shadow */ 0 1px 1px rgba(0, 0, 0, 0.15),
     /* The second layer */ 0 10px 0 -5px #eee,
     /* The second layer shadow */ 0 10px 1px -4px rgba(0, 0, 0, 0.15),
     /* The third layer */ 0 20px 0 -10px #eee,
     /* The third layer shadow */ 0 20px 1px -9px rgba(0, 0, 0, 0.15);
-    padding: 3rem 0;
-    margin-bottom: 3rem;
+  padding: 3rem 0;
+  margin-bottom: 3rem;
 }
+
+@media screen and (min-width: 47rem) {
+  .paper {
+    max-width: 70%;
+  }
+}
+@media screen and (min-width: 82rem){
+  .paper {
+    max-width: 60%;
+  }
+}
+
